# sphere_cpp_2020

./: .gitignore  CMakeLists.txt  README.md  clang-format.sh
.github/workflows/: main.yml
hw_1_process/: CMakeLists.txt
lib/: CMakeLists.txt
lib/hw_1_process/: CMakeLists.txt
lib/hw_1_process/include/: Process.hpp  descriptor.hpp  process.hpp
lib/hw_1_process/src/: Process.cpp  descriptor.cpp  process.cpp
lib/hw_1_process/tests/: README.md  hw1_test.cpp
lib/hw_2_logger/: CMakeLists.txt
lib/hw_2_logger/include/: logger.hpp
lib/hw_2_logger/src/: file_logger.cpp  logger.cpp  logger_singleton.cpp  stderr_logger.cpp  stdout_logger.cpp
lib/hw_2_logger/tests/: main_test.cpp  test_class.hpp
lib/hw_3_tcp/: CMakeLists.txt
lib/hw_3_tcp/include/: tcp.hpp  tcp_server.hpp
lib/hw_3_tcp/src/: connection.cpp  server.cpp
lib/hw_3_tcp/tests/: test_client.cpp  test_server.cpp
lib/hw_5_net/: CMakeLists.txt
lib/hw_5_net/include/: epoll.hpp  net.hpp
lib/hw_5_net/src/: epoll.cpp  service.cpp
lib/hw_5_net/tests/: test.cpp
some_stuff/: read.sh
some_stuff/scripts/: test_1hw.sh
src/: main.cpp
